# book1

./: .gitignore  GEMINI.md  check_sitemap.py
.specify/memory/: constitution.md
backend/: README.md  debug.py  main.py  pyproject.toml  quickstart.md  requirements.txt  retrieving.py
backend/src/: config.py  main.py  utils.py
backend/src/api/: auth.py  main.py
backend/src/api/endpoints/: benchmark.py  metrics.py  validation.py
backend/src/models/: validation_models.py
backend/src/services/: rag_validation_service.py
backend/tests/: test_dataset.json  test_rag_validation_service.py  test_validation_models.py
book/: CONTRIBUTING.md  docusaurus.config.ts  package-lock.json  sidebars.ts
book/docs/: authoring-format-for-personalization.md  intro.md
book/docs/chapter-1/: _category_.json  lesson-1.1.md  lesson-1.2.md  lesson-1.3.md  lesson-1.4.md  lesson-1.5.md
book/docs/chapter-2/: _category_.json  lesson-2.1.md  lesson-2.2.md  lesson-2.3.md  lesson-2.4.md  lesson-2.5.md
book/docs/chapter-3/: _category_.json  lesson-3.1.md  lesson-3.2.md  lesson-3.3.md  lesson-3.4.md  lesson-3.5.md
book/i18n/en/: code.json
book/i18n/ur/: code.json
book/src/context/: SkillLevelContext.tsx
book/src/css/: custom.css
book/src/theme/: Root.tsx
specs/001-book-structure-spec/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-rag-content-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+31 files in other folders)
